# saunadge

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: image.yml
saunadge/: server.py
saunadge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_saunadge.py
