[tool.poetry]
name = "saunadge"
version = "0.1.0"
description = ""
authors = ["po3rin"]
repository = "http://github.com/po3rin/saunadge"
homepage = "http://github.com/po3rin/saunadge"
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.scripts]
saunadge = "saunadge.server:cli"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
Flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
