[tool.poetry]
name = "saunadge"
version = "0.2.1"
description = "saunadge lets you to generate sakatsu(サ活/サウナ活動) badge. saunadge server aggregates from the data over"
authors = ["po3rin"]
repository = "https://github.com/po3rin/saunadge"
homepage = "https://github.com/po3rin/saunadge"
license = "Apache-2.0"

[tool.poetry.scripts]
saunadge = "saunadge.server:cli"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
Flask = "^1.1.2"
gunicorn = "^20.0.4"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
